--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,8 +3,10 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,13 +17,20 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+thead {
+  color: white;
+}
+tbody {
+  color: white;
+}
+.description-name{
+  color: #61dafb;
 }
 
 .App-link {
